<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/song_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:vmSafeMode="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_height="300dp"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/album"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:id="@+id/artistOrGenreName"
            android:gravity="center"
            android:layout_below="@id/album" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:layout_below="@id/artistOrGenreName"
            android:gravity="center"
            android:id ="@+id/albumName"/>

    <ListView
        android:id="@+id/ListViewSV"
        android:choiceMode="singleChoice"
        android:layout_width="0dp"
        android:layout_height="0dp">
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:id="@+id/playerBarSV"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/RewindSV"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            app:srcCompat="@drawable/rewind"
            android:layout_marginBottom="16dp"
            android:clickable="true" />

        <ImageButton
            android:id="@+id/PrevSV"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:layout_gravity="bottom|start"
            app:srcCompat="@drawable/previous"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content" />

        <ImageButton
            android:id="@+id/fabIOSV"
            android:height="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/play"/>

        <ImageButton
            android:id="@+id/NextSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/skip"
            android:layout_marginBottom="16dp"
            android:clickable="true" />

        <ImageButton
            android:id="@+id/RandomSV"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            app:srcCompat="@drawable/shuffle"
            android:clickable="true"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/playerBarSV"
        android:id="@+id/seekBarContainerSV"
        android:layout_weight="100">
        <SeekBar
            android:layout_marginTop="13dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarSV"/>
    </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
