...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_weight="1" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:tabMode="scrollable"
            app:tabPaddingStart="30dp"
            app:tabPaddingEnd="30dp"/>
...
        android:paddingTop="115dp">

        <ListView
            android:cacheColorHint="@android:color/transparent"
            android:background="@drawable/listbackground"
            android:listSelector="#E0ECF8"
            android:id="@+id/ListView1"
            android:choiceMode="singleChoice"
            android:layout_width="match_parent"
            android:layout_height="380dp">
        </ListView>

        <Button
...
        android:layout_marginBottom="88dp"
        android:layout_gravity="bottom"
        android:layout_weight="100">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="100">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Prev"
            android:layout_height="wrap_content"
            app:backgroundTint="@android:color/black"
            android:layout_gravity="bottom|start"
            app:srcCompat="@android:drawable/ic_media_previous"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Rewind"
            app:backgroundTint="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            app:srcCompat="@android:drawable/ic_media_rew"
            android:layout_marginBottom="16dp"
            android:clickable="true" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabIO"
            android:height="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            app:backgroundTint="@android:color/black"
            android:src="@android:drawable/ic_media_play"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            app:backgroundTint="@android:color/black"
            app:srcCompat="@android:drawable/ic_media_next"
            android:layout_marginBottom="16dp"
            android:clickable="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Random"
            app:backgroundTint="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            app:srcCompat="@drawable/shuffle"
            android:clickable="true"
...
