...
        <ToggleButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_columnWeight="1"
            android:textOn = "Display SongView"
            android:textOff = "Display SongList"
            android:id="@+id/songViewToggleButton"
            android:layout_column="1"
            android:layout_row="2"
            android:drawableTop="@drawable/album"
            android:textColor="@color/default_color"
            android:backgroundTint="@color/colorPrimary"/>

...
